--- a/listwait-app/src/components/ComponentStyles/Dashboard.css
+++ b/listwait-app/src/components/ComponentStyles/Dashboard.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
+.dashboard {
+    background-color: white;
+}
 
 .container {
     text-align: center;
